fixed z-index of the header, for some reason 1000 was not enough, and the autocomplete field was in front of the header in case we scrolled down

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,7 @@ mat-divider {
   top: 0;
   left: 0;
   position: fixed;
-  z-index: 100;
+  z-index: 2000;
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 2rem;
   color: #faf0de;
